--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/chef-profile.png" alt="">
         <h1 class="text-uppercase mb-0">Love Config Management</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Love chef</h2>
+        <h2 class="font-weight-light mb-0">love chef</h2>
       </div>
     </header>
 
